--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "jquery": "^3.4.1"
+    "gulp-cli": "^2.3.0",
+    "jquery": "^3.5.1"
   }
 }
